[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "htcondor_status"
authors = [{name = "Michael V. DePalatis"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "nodejs-bin",
    "pandas",
    "tornado>=6.2",
]

[project.urls]
Source = "https://github.com/mivade/htcondor_status"

[project.optional-dependencies]
dev = [
    "pytest",
]
